--- a/src/HomeScreen.css
+++ b/src/HomeScreen.css
@@ -1,11 +1,11 @@
 .gridC {
     display: grid;
-    /* border: 1px solid black; */
+    /* border: 1px solid black; */ 
     grid-template-columns: repeat(2, 1fr);
 }
 
 #gridI {
-    /* border: 2px solid black; */
+    /* border: 2px solid black; */ 
 }
 
 .flexC {
@@ -18,5 +18,6 @@
     margin: 20px;
     padding: 20px;
     border-radius: 10px;
-    width: 300px;
+    width: 400px;
+    height: 100px;
 }
