show logged in email and add 'wpm' text to player list

--- a/src/HomeScreen.css
+++ b/src/HomeScreen.css
@@ -1,3 +1,11 @@
+.logged-in-status {
+    position: absolute;
+    top: 8px;
+    right: 5px;
+    font-size: 18px;
+  }
+  
+
 .gridC {
     display: grid;
     /* border: 1px solid black; */ 
